<resources>
    <string name="app_name">Brain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rule_game">Правила игры перед вами будет три фигуры, дву снизу и одна сверху, в двух из них будут числа. Нуобходимо, чтобы сумма чисел из двух
    нижних фигур была равна числу в вурхней фигуре, для этого нужно вставить недостающее число \n\n Пример в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4 Значит
        на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7
    </string>
    <string name="start_button">Start</string>
    <string name="chose_level">Выберите уровень:</string>
    <string name="test_btn">Test</string>
    <string name="easy_btn">easy</string>
    <string name="normal_btn">normal</string>
    <string name="hard_btn">hard</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="question_mark">\?</string>
    <string name="game_over">Game Over</string>

    <string name="button_understand">Понятно</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_title">Выберите уровень:</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="test_level">Тестовый</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>

</resources>